@@ -170,193 +170,61 @@
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/pane_pos</key>
-      <applyto>/apps/procman/pane_pos</applyto>
+      <key>/schemas/apps/procman/bg_color</key>
+      <applyto>/apps/procman/bg_color</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>300</default>
+      <type>string</type>
+      <default>#000000</default>
       <locale name="C">
-        <short>Saves the pane position for the sytem monitor tab</short>
+        <short>Default graph background color</short>
         <long></long>
       </locale>
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/bg_red</key>
-      <applyto>/apps/procman/bg_red</applyto>
+      <key>/schemas/apps/procman/frame_color</key>
+      <applyto>/apps/procman/frame_color</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>0</default>
+      <type>string</type>
+      <default>#231e89aa2805</default>
       <locale name="C">
-        <short>Graph background red color</short>
+        <short>Default graph frame color</short>
         <long></long>
       </locale>
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/bg_green</key>
-      <applyto>/apps/procman/bg_green</applyto>
+      <key>/schemas/apps/procman/cpu_color</key>
+      <applyto>/apps/procman/cpu_color</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>0</default>
+      <type>string</type>
+      <default>#f25915e815e8</default>
       <locale name="C">
-        <short>Graph background green color</short>
+        <short>Default graph cpu color</short>
         <long></long>
       </locale>
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/bg_blue</key>
-      <applyto>/apps/procman/bg_blue</applyto>
+      <key>/schemas/apps/procman/mem_color</key>
+      <applyto>/apps/procman/mem_color</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>0</default>
+      <type>string</type>
+      <default>#f25915e815e8</default>
       <locale name="C">
-        <short>Graph background blue color</short>
+        <short>Default graph mem color</short>
         <long></long>
       </locale>
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/frame_red</key>
-      <applyto>/apps/procman/frame_red</applyto>
+      <key>/schemas/apps/procman/swap_color</key>
+      <applyto>/apps/procman/swap_color</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>20409</default>
+      <type>string</type>
+      <default>#212fe32b212f</default>
       <locale name="C">
-        <short>Graph frame red color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/frame_green</key>
-      <applyto>/apps/procman/frame_green</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>32271</default>
-      <locale name="C">
-        <short>Graph frame green color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/frame_blue</key>
-      <applyto>/apps/procman/frame_blue</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>17781</default>
-      <locale name="C">
-        <short>Graph frame blue color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/cpu_red</key>
-      <applyto>/apps/procman/cpu_red</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>65535</default>
-      <locale name="C">
-        <short>Graph cpu red color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/cpu_green</key>
-      <applyto>/apps/procman/cpu_green</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>591</default>
-      <locale name="C">
-        <short>Graph cpu green color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/cpu_blue</key>
-      <applyto>/apps/procman/cpu_blue</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>0</default>
-      <locale name="C">
-        <short>Graph cpu blue color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/mem_red</key>
-      <applyto>/apps/procman/mem_red</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>65535</default>
-      <locale name="C">
-        <short>Graph mem red color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/mem_green</key>
-      <applyto>/apps/procman/mem_green</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>591</default>
-      <locale name="C">
-        <short>Graph mem green color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/mem_blue</key>
-      <applyto>/apps/procman/mem_blue</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>0</default>
-      <locale name="C">
-        <short>Graph mem blue color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/swap_red</key>
-      <applyto>/apps/procman/swap_red</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>1363</default>
-      <locale name="C">
-        <short>Graph mem swap color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/swap_green</key>
-      <applyto>/apps/procman/swap_green</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>52130</default>
-      <locale name="C">
-        <short>Graph swap green color</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/swap_blue</key>
-      <applyto>/apps/procman/swap_blue</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>18595</default>
-      <locale name="C">
-        <short>Graph swap blue color</short>
+        <short>Default graph swap color</short>
         <long></long>
       </locale>
       </schema>
