@@ -1,3 +1,13 @@
+2002-01-06  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: save the colors as hex values
+
+	* callbacks.c, procdialogs.c: same here
+
+	* procman.schemas: update to new gconf values. If udating
+	make sure to reinstall the schemas file or you are 
+	screwed ;)
+
 2002-01-02  Kevin Vandersloot <kfv101@psu.edu>
 
 	* favorites.c: when hiding or reshowing a processes make sure
